services/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  externalTraficPolicy: Cluster
  clusterIP: 123.98.90.77.21
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376


# This specification creates a new Service object named "my-service",
# which targets TCP port 9376 on any Pod with the app=MyApp label.
